--- a/web/index.html
+++ b/web/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html data-capo=""><head>
+<!DOCTYPE html><html lang="ja" data-capo=""><head>
 <!-- ComfyUI <head /> Start -->
 		<meta charset="UTF-8">
 		<title>ComfyUI</title>
@@ -18,8 +18,9 @@
 <!-- ComfyUI <head /> End -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Honoo Technologies</title>
 <link rel="stylesheet" href="/_nuxt/entry.ViYmMBqh.css">
-<link rel="modulepreload" as="script" crossorigin="" href="/_nuxt/CEksBxd6.js">
+<link rel="modulepreload" as="script" crossorigin="" href="/_nuxt/DqChA8-F.js">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/creator.CxFa_mdW.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/discover.TaBgMKzZ.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/earth.L2wQGbz9.svg">
@@ -34,21 +35,23 @@
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/shakehands.BdiZNjhH.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/storyboard.B0coGgSr.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/supporter.Dku722a3.svg">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/BCFba9EX.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/CtV_Q1tx.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/B1y01ROG.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/CZ6SCVYy.js">
 <link rel="prefetch" as="script" crossorigin="" href="/_nuxt/Bt1NFM7b.js">
 <link rel="prefetch" as="style" crossorigin="" href="/_nuxt/default.DL7QxhFL.css">
 <link rel="prefetch" as="style" crossorigin="" href="/_nuxt/GenerateSettingList.BmWUiZl3.css">
 <link rel="prefetch" as="style" crossorigin="" href="/_nuxt/LookStyleSetting.Dewa3Srs.css">
 <link rel="prefetch" as="style" crossorigin="" href="/_nuxt/Ratio.qtMrFk5B.css">
 <link rel="prefetch" as="style" crossorigin="" href="/_nuxt/PromptSetting.DLMCEXX_.css">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/rUMyDTCf.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/Pgaiz6XD.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/Bel2iWVX.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/SiDxIiSB.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/CNoM7xFm.js">
-<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/CBms8Xt8.js">
-<script type="module" src="/_nuxt/CEksBxd6.js" crossorigin=""></script></head><body>
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/BCzHxsni.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/CFNKJfOV.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/Ci49nHjP.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/DPdciK0P.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/CX3bpM7S.js">
+<link rel="prefetch" as="script" crossorigin="" href="/_nuxt/BTl2oj1A.js">
+<link rel="icon" type="image/x-icon" href="/favicon.ico?v=undefined">
+<script type="module" src="/_nuxt/DqChA8-F.js" crossorigin=""></script>
+<script id="unhead:payload" type="application/json">{"title":"Honoo Technologies"}</script></head><body>
 <!-- ComfyUI <body /> Start -->
 		<div id="vue-app"></div>
 		<div id="comfy-user-selection" class="comfy-user-selection" style="display: none">
@@ -79,5 +82,5 @@
 			</main>
 		</div>
 <!-- ComfyUI <body /> End -->
-<div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1729046058759,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{VERSION:"",DOMAIN:".honoo.tokyo",TOKEN_KEY:"honoo_token",BASE_URL:"https://honoo.tokyo",STORAGE_URL:"https://api.honoo.tokyo/storage",HONOO_URL:"https://honoo.tokyo",ANIME_JOB_URL:"https://studios.honoo.tokyo/",CHANGE_ANIME_URL:"https://change-anime.honoo.tokyo/",GOOGLE_CLIENT_ID:"1051433306351-dm1bvabtpsmrslmqga7hpt5bnmagm880.apps.googleusercontent.com",GOOGLE_CLIENT_REDIRECT_URI:"https://honoo.tokyo/oauth2callback",GOOGLE_CLIENT_SCOPE:"email openid",GOOGLE_TAG_MANAGER_CONTAINER_ID:"GTM-NQCCJVGB",API_URL:"https://api.honoo.tokyo",DEV_ENABLED:true,BASIC_AUTH_ENABLED:false,ENVIRONMENT:"production",STRIPE:{TEST_MODE:false,PUBLISHABLE_KEY:"pk_live_51K65osBRyzQ2QeGvvZ7MN1wNE37QMUl6zaoI9RouoJFcJ0WMIPHCJUpghbUdpwHDEsov79qvUBhP6JeU1tos7V2C00lyOR19d4",ACCOUNT:"acct_1K65osBRyzQ2QeGv",API_VERSION:"2020-08-27",LOCALE:"auto"}},app:{baseURL:"/",buildId:"34cee20f-da62-46f7-9ccb-1eac52affc0d",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1729046465842,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{VERSION:"",DOMAIN:".honoo.tokyo",TOKEN_KEY:"honoo_token",BASE_URL:"https://honoo.tokyo",STORAGE_URL:"https://api.honoo.tokyo/storage",HONOO_URL:"https://honoo.tokyo",ANIME_JOB_URL:"https://studios.honoo.tokyo/",CHANGE_ANIME_URL:"https://change-anime.honoo.tokyo/",GOOGLE_CLIENT_ID:"1051433306351-dm1bvabtpsmrslmqga7hpt5bnmagm880.apps.googleusercontent.com",GOOGLE_CLIENT_REDIRECT_URI:"https://honoo.tokyo/oauth2callback",GOOGLE_CLIENT_SCOPE:"email openid",GOOGLE_TAG_MANAGER_CONTAINER_ID:"GTM-NQCCJVGB",API_URL:"https://api.honoo.tokyo",DEV_ENABLED:true,BASIC_AUTH_ENABLED:false,ENVIRONMENT:"production",STRIPE:{TEST_MODE:false,PUBLISHABLE_KEY:"pk_live_51K65osBRyzQ2QeGvvZ7MN1wNE37QMUl6zaoI9RouoJFcJ0WMIPHCJUpghbUdpwHDEsov79qvUBhP6JeU1tos7V2C00lyOR19d4",ACCOUNT:"acct_1K65osBRyzQ2QeGv",API_VERSION:"2020-08-27",LOCALE:"auto"}},app:{baseURL:"/",buildId:"e183d0f3-0282-4270-813b-6f3a2c3fbf71",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
