--- a/web/dev/index.html
+++ b/web/dev/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><html  lang="ja" data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Honoo Technologies</title>
-<link rel="stylesheet" href="/_nuxt/entry.CzW7sZud.css">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DnIVQ8ma.js">
+<link rel="stylesheet" href="/_nuxt/entry.CNehvyMY.css">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/bBMCh81m.js">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/creator.CxFa_mdW.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/discover.TaBgMKzZ.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/earth.L2wQGbz9.svg">
@@ -17,21 +17,24 @@
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/shakehands.BdiZNjhH.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/storyboard.B0coGgSr.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/supporter.Dku722a3.svg">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Gk_Th7vp.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/D0oM82XO.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DmolMG9N.js">
-<link rel="prefetch" as="style" crossorigin href="/_nuxt/default.DL7QxhFL.css">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/De1iUlX-.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/D3hL81iU.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/K2Fi0GAF.js">
+<link rel="prefetch" as="style" crossorigin href="/_nuxt/default.DYDe4FS3.css">
+<link rel="prefetch" as="style" crossorigin href="/_nuxt/Logo.D23BEoat.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/GenerateSettingList.BmWUiZl3.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/LookStyleSetting.Dewa3Srs.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/Ratio.qtMrFk5B.css">
-<link rel="prefetch" as="style" crossorigin href="/_nuxt/PromptSetting.DLMCEXX_.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/trHCqEKj.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/OIcMg6sW.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DkAGMHh7.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BaHqWzu_.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/ChxDH2eC.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DDTyNbSz.js">
-<link rel="icon" type="image/x-icon" href="/favicon.ico?v=undefined">
-<script type="module" src="/_nuxt/DnIVQ8ma.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"Honoo Technologies"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1731633528390,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{VERSION:"",DOMAIN:".honoo.tokyo",TOKEN_KEY:"dev_honoo_token",BASE_URL:"dev-tech-bgart.honoo.tokyo",STORAGE_URL:"https://dev-default-api.honoo.tokyo/storage",HONOO_URL:"https://dev-default.honoo.tokyo",ANIME_JOB_URL:"https://dev-animejob.honoo.tokyo",CHANGE_ANIME_URL:"https://change-anime-dot-honoo-324909.an.r.appspot.com",COMFYUI_GENERATE_ENABLED:false,GOOGLE_CLIENT_ID:"863567327658-d2dg049m32v8k2c33aprprvngi533goh.apps.googleusercontent.com",GOOGLE_CLIENT_REDIRECT_URI:"https://dev-default.honoo.tokyo/oauth2callback",GOOGLE_CLIENT_SCOPE:"email openid",GOOGLE_TAG_MANAGER_CONTAINER_ID:"",API_URL:"https://dev-tech-bgart-api.honoo.tokyo",DEV_ENABLED:true,BASIC_AUTH_ENABLED:true,ENVIRONMENT:"development",STRIPE:{TEST_MODE:true,PUBLISHABLE_KEY:"pk_test_51K65osBRyzQ2QeGvU1NorTOWFhBdWw0rUaqcu13uH7rW3LlVz2RLd1HSyAnmvGpOBOiGLwerLhAgUWgrDd0hAN7J00MAMzCJaV",ACCOUNT:"acct_1K65osBRyzQ2QeGv",API_VERSION:"2020-08-27",LOCALE:"auto"}},app:{baseURL:"/",buildId:"43492775-dcbf-463b-be12-5feae0064a8e",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="prefetch" as="style" crossorigin href="/_nuxt/PromptSetting.DkExkkgQ.css">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BdjXxxxW.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BWKzHzLM.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/By2XaSyd.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BrZ_r_ZE.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BiY3h4Sd.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CfZWCYdJ.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CeDpuHUE.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/ClxZ9IiR.js">
+<link rel="icon" type="image/x-icon" href="/favicon.ico?v=0.1.0-alpha.1">
+<script type="module" src="/_nuxt/bBMCh81m.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"Honoo Technologies"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1733984394738,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{VERSION:"0.1.0-alpha.1",DOMAIN:".honoo.tokyo",TOKEN_KEY:"dev_tech_honoo_token",HONOO_TOKEN_KEY:"dev_honoo_token",BASE_URL:"https://local.honoo.tokyo:3000",STORAGE_URL:"https://dev-default-api.honoo.tokyo/storage",HONOO_URL:"https://dev-default.honoo.tokyo",ANIME_JOB_URL:"https://dev-animejob.honoo.tokyo",CHANGE_ANIME_URL:"https://change-anime-dot-honoo-324909.an.r.appspot.com",COMFYUI_GENERATE_ENABLED:true,USE_API_FOR_GENERATION:true,GOOGLE_CLIENT_ID:"863567327658-d2dg049m32v8k2c33aprprvngi533goh.apps.googleusercontent.com",GOOGLE_CLIENT_REDIRECT_URI:"https://dev-default.honoo.tokyo/oauth2callback",GOOGLE_CLIENT_SCOPE:"email openid",GOOGLE_TAG_MANAGER_CONTAINER_ID:"",API_URL:"https://dev-tech-bgart-api.honoo.tokyo/api",HONOO_API_URL:"https://dev-default-api.honoo.tokyo/api",DEV_ENABLED:true,ENVIRONMENT:"local",STRIPE:{TEST_MODE:true,PUBLISHABLE_KEY:"pk_test_51K65osBRyzQ2QeGvU1NorTOWFhBdWw0rUaqcu13uH7rW3LlVz2RLd1HSyAnmvGpOBOiGLwerLhAgUWgrDd0hAN7J00MAMzCJaV",ACCOUNT:"acct_1K65osBRyzQ2QeGv",API_VERSION:"2020-08-27",LOCALE:"auto"}},app:{baseURL:"/",buildId:"59edfd5b-4920-4f5b-8f7a-54f9c246d93c",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
