--- a/web/nuxt/generate/upload/index.html
+++ b/web/nuxt/generate/upload/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><html  lang="ja" data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Honoo Technologies</title>
-<link rel="stylesheet" href="/_nuxt/entry.B7ft5aKL.css">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/WHSOQWA4.js">
+<link rel="stylesheet" href="/_nuxt/entry.CkvjCRmx.css">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CWZ8UILv.js">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/creator.CxFa_mdW.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/discover.TaBgMKzZ.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/earth.L2wQGbz9.svg">
@@ -17,22 +17,25 @@
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/shakehands.BdiZNjhH.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/storyboard.B0coGgSr.svg">
 <link rel="prefetch" as="image" type="image/svg+xml" href="/_nuxt/supporter.Dku722a3.svg">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BEAXOoBS.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Rb1sZ4zt.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bpf2x6MJ.js">
-<link rel="prefetch" as="style" crossorigin href="/_nuxt/default.DrS2995W.css">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/hwu45rgT.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BJ35wDkG.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DfN-l8Fp.js">
+<link rel="prefetch" as="style" crossorigin href="/_nuxt/default.BzxV7WQB.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/Logo.D23BEoat.css">
-<link rel="prefetch" as="style" crossorigin href="/_nuxt/PromptSetting.uOtnjymq.css">
+<link rel="prefetch" as="style" crossorigin href="/_nuxt/LookStyleImage.B5qlStkY.css">
+<link rel="prefetch" as="style" crossorigin href="/_nuxt/LoaderRect.C1nPuQIf.css">
+<link rel="prefetch" as="style" crossorigin href="/_nuxt/PromptSetting.BJexmenF.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/Ratio.qtMrFk5B.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/Prompt.BELrhoVQ.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/NrpjqkQf.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CJ_G2etx.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BdRxTk9U.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dy8Ia0_c.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DfZwukZZ.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BcNIklcX.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DhkEbuiZ.js">
-<link rel="icon" type="image/x-icon" href="/favicon.ico?v=0.1.0-alpha.2">
-<script type="module" src="/_nuxt/WHSOQWA4.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"Honoo Technologies"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1734066057703,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{ENVIRONMENT:"production",DOMAIN:".honoo.tokyo",TOKEN_KEY:"tech_honoo_token",HONOO_TOKEN_KEY:"honoo_token",BASE_URL:"https://tech.honoo.tokyo",API_URL:"https://tech-api.honoo.tokyo/api",HONOO_API_URL:"https://api.honoo.tokyo/api",STORAGE_URL:"https://api.honoo.tokyo/storage",HONOO_URL:"https://honoo.tokyo",ANIME_JOB_URL:"https://studios.honoo.tokyo/",CHANGE_ANIME_URL:"https://change-anime.honoo.tokyo/",DEV_ENABLED:false,COMFYUI_GENERATE_ENABLED:true,USE_API_FOR_GENERATION:true},app:{baseURL:"/",buildId:"3b5c638b-c964-4a5b-ba59-dc24460d2fc6",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BJt7S0hL.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CfWC_2Im.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CdH-ClmR.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bl7gFmoX.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/EK75TfZ5.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DfwfIJQD.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/oQDVEu3p.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Di4hDA_r.js">
+<link rel="icon" type="image/x-icon" href="/favicon.ico?v=0.1.0-alpha.3">
+<script type="module" src="/_nuxt/CWZ8UILv.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"Honoo Technologies"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1734659520132,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{ENVIRONMENT:"production",DOMAIN:".honoo.tokyo",TOKEN_KEY:"tech_honoo_token",HONOO_TOKEN_KEY:"honoo_token",BASE_URL:"https://tech.honoo.tokyo",API_URL:"https://tech-api.honoo.tokyo/api",HONOO_API_URL:"https://api.honoo.tokyo/api",STORAGE_URL:"https://api.honoo.tokyo/storage",HONOO_URL:"https://honoo.tokyo",ANIME_JOB_URL:"https://studios.honoo.tokyo/",CHANGE_ANIME_URL:"https://change-anime.honoo.tokyo/",DEV_ENABLED:false,COMFYUI_GENERATE_ENABLED:true,USE_API_FOR_GENERATION:true},app:{baseURL:"/",buildId:"323ba116-3223-4948-a074-33dbb161ab1d",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
